--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -34,6 +34,7 @@ As per the above plot, petal.length and petal.width has the highest correlation 
 Irismean<-sapply(Filter(is.numeric, Iris.dt), mean)
 Irismean
 
+Sepal.length variable has the highest mean of 5.84
 
 ##Question 4
 ```{r}
