--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -2,26 +2,41 @@
 title: "Assignment 1"
 output: pdf_document
 ---
+##Loading required packages
+```{r}
+if(!require("pacman")) install.packages("pacman")
+pacman::p_load(esquisse, forecast, tidyverse, 
+               gplots, GGally, gganimate,
+               mosaic, scales, mosaic, mapproj, mlbench, data.table)
+library("corrplot")
+search()
+theme_set(theme_classic())
+```
 
 ##Loading Iris dataset
 
 ```{r}
-install.packages("data.table")          #to add if require part
-library("data.table")
+data("iris")
+#checking class of iris dataset
+class("iris")
+#Converting to data.table 
 Iris.dt<-setDT(iris)
 class(Iris.dt)
-
-library("corrplot")
 
 ```
 ##Question 1
 ```{r}
-Irischar<-Iris.dt[,1:4]
-Iriscorr<-cor(Irischar)
+#Keeping only numeric variables
+Irisnum.dt <- Filter(is.numeric, Iris.dt)
+
+#computing correlation of numeric variables
+Iriscorr<-cor(Irisnum.dt)
+
+#Visualizing the correlation matrix
 Iriscorrplot<-corrplot(Iriscorr, type="upper", order="hclust",method="circle",addCoef.col = "Green")
 
 ```
-As per the above plot, petal.length and petal.width has the highest correlation coefficient of 0.96 showing strong positive relationship
+As per the above plot, petal length and petal width has the highest correlation coefficient of 0.96 indicating strong positive linear relationship.
 
 ##Question 2
 ```{r}
@@ -31,10 +46,18 @@ As per the above plot, petal.length and petal.width has the highest correlation 
 
 ##Question 3
 ```{r}
-Irismean<-sapply(Filter(is.numeric, Iris.dt), mean)
-Irismean
+#Keeping only numeric variables
+Irisnum.dt <- Filter(is.numeric, Iris.dt)
 
-Sepal.length variable has the highest mean of 5.84
+#Calculating mean
+Irismean<-sapply(Irisnum.dt, mean)
+Irismean
+```
+```{r}
+#Checking maximum of calculated mean
+max(Irismean)
+```
+Sepal.length variable has the highest mean of 5.843333
 
 ##Question 4
 ```{r}
