--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -77,7 +77,7 @@ ggplot(Iris.dt, aes(x=Petal.Length, y=Petal.Width, color=Species)) +
 
 
 ##Question 6 
-The Petal Length and Petal Width combination provides a better separation of records between the two graphs becuase the variables of Petal Length and Petal Width are more highly correlated (0.96) than Sepal Length and Width (-0.12). The Petal graph represents lower error rate when calculating the relationship between petal length and petal width, resulting in more defined clusteres per species.
+The Petal Length and Petal Width combination provides a better separation of records between the two graphs becuase the variables of Petal Length and Petal Width are more highly correlated (0.96) than Sepal Length and Width (-0.12). The Petal graph in question 5 represents lower error rate when calculating the relationship using predictive variable between petal length and petal width, resulting in more defined clusteres per species. In addition there is significant overlap between Versicolor and Virginica species in the Sepal graph in question 4. The high error rate in this graph makes it difficult to classify the species using these specific variables. 
 
 ##Question 7 
 ```{r Confusion Matrix Accuracy}
