--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -85,3 +85,6 @@ The Petal Length and Petal Width combination provides a better separation of rec
 1-.07 #accuracy percentage
 
 ```
+##Question 9 
+```Specificity = (TN / (TN + FP)) = 48 / (48 + 2) = 48 / 50 -> 0.96 (96%)
+```
